--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
                         </div>
                         <div class="row portfolio-container">
                             <div class="col-lg-5 col-md-6 portfolio-item web-des">
-                                <div class="portfolio-wrap">
+                            	<div class="portfolio-wrap">
                                     <figure>
-                                        <img src="img/ebookProject.PNG" class="img-fluid" alt="">
-                                        <a href="img/ebookProject.PNG" data-lightbox="portfolio" data-title="Project Name" class="link-preview" title="Preview"><i class="fa fa-eye"></i></a>
-                                        <a href="https://github.com/suar0905/shop" target="_blank" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
-                                        <a class="portfolio-title" href="#review1">프로젝트 이름 <span>전자책 쇼핑몰 프로젝트</span></a>
+                                        <img src="img/main.PNG" class="img-fluid" alt="">
+                                        <a href="img/main.PNG" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <a href="https://github.com/GDJ40-B1/tap" target="_blank" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
+                                        <a class="portfolio-title" href="#review1">프로젝트 이름 <span>숙박 공유 서비스[TAP] 프로젝트</span></a>
                                     </figure>
                                 </div>
                             </div>
@@ -211,14 +211,14 @@
                             </div>
 
                             <div class="col-lg-5 col-md-6 portfolio-item dig-mar">
-                                <div class="portfolio-wrap">
+                            	<div class="portfolio-wrap">
                                     <figure>
-                                        <img src="img/main.PNG" class="img-fluid" alt="">
-                                        <a href="img/main.PNG" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
-                                        <a href="https://github.com/GDJ40-B1/tap" target="_blank" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
-                                        <a class="portfolio-title" href="#review3">프로젝트 이름 <span>숙박 공유 서비스[TAP] 프로젝트</span></a>
+                                        <img src="img/ebookProject.PNG" class="img-fluid" alt="">
+                                        <a href="img/ebookProject.PNG" data-lightbox="portfolio" data-title="Project Name" class="link-preview" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <a href="https://github.com/suar0905/shop" target="_blank" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
+                                        <a class="portfolio-title" href="#review3">프로젝트 이름 <span>전자책 쇼핑몰 프로젝트</span></a>
                                     </figure>
-                                </div>
+                                </div>                                
                             </div>
                         </div>
                     </div>
@@ -227,94 +227,7 @@
                 <div class="review" id="review">
                     <div class="content-inner">                      
                         <div class="row align-items-center review-slider">
-                            <div class="col-md-12" id="review1">
-                                <div class="review-slider-item">
-                                	<div>
-                                		<h4><b>◈ 전자책 쇼핑몰 Project</b></h4><hr>
-                                        <img src="img/ebookProject.PNG" alt="Image" height="300" width="750">
-                                    </div>
-                                    <div class="review-text">
-                                    	<table border="0" class="table">
-                                        	<tr>
-                                        		<th>프로젝트 방식</th>
-                                        		<td>Model 1</td>
-                                        	</tr>
-                                        	<tr>
-                                        		<th>사용 프로그램</th>
-                                        		<td>Eclipse(2020-12 : 4.18.0), HeidiSQL(10.1.48)</td>
-                                        	</tr>
-                                        	<tr>
-                                        		<th>사용 언어</th>
-                                        		<td>JAVA, SQL, HTML</td>
-                                        	</tr>
-                                        	<tr>
-                                        		<th>작업 기간</th>
-                                        		<td>2021.09.14 ~ 2021.10.12</td>
-                                        	</tr>
-                                        	<tr>
-                                        		<th>프로젝트 설명</th>
-                                        		<td>
-                                        			Model1 방식으로 구현한 첫 번째 프로젝트인 전자책 쇼핑몰 프로젝트입니다.<br><br>
-                                        			이용자로는 일반 회원과 관리자로 구분되어 있으며,<br>
-                                        			일반 회원은 전자책 주문, 주문 후 후기작성, 문의 작성을 할 수 있습니다.<br>
-                                        			관리자는 회원 관리, 전자책 관리, 공지사항 관리, 문의 관리를 할 수 있습니다.<br><br>
-                                        			공통 기능으로는 로그인, 회원가입, 개인정보 수정, 회원 탈퇴를 할 수 있습니다. 
-                                        		</td>
-                                        	</tr>
-                                        	<tr>
-                                        		<th>Link</th>
-                                        		<td>
-                                        			<a class="btn btn-outline-danger btn-sm" href="https://github.com/suar0905/shop" target="_blank">Github</a>
-                                        			<a class="btn btn-outline-danger btn-sm" href="http://3.34.40.41/shop/" target="_blank">Project</a>
-                                        		</td>                     
-                                        	</tr>
-                                        </table>   
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-12" id="review2">
-                                <div class="review-slider-item">
-                                    <div>
-                                		<h4><b>◈ 달력 Project</b></h4><hr>
-                                        <img src="img/todoProject.PNG" alt="Image" height="300" width="750">
-                                    </div>
-                                    <div class="review-text">                                 
-                                    	<table border="0" class="table">
-	                                    	<tr>
-	                                       		<th>프로젝트 방식</th>
-	                                       		<td>Model 2</td>
-	                                       	</tr>
-	                                       	<tr>
-	                                       		<th>사용 프로그램</th>
-	                                       		<td>Eclipse(2020-12 : 4.18.0), HeidiSQL(10.1.48)</td>
-	                                       	</tr>
-	                                       	<tr>
-	                                       		<th>사용 언어</th>
-	                                       		<td>JAVA, SQL, HTML</td>
-	                                       	</tr>
-	                                       	<tr>
-	                                       		<th>작업 기간</th>
-	                                       		<td>2021.11.08 ~ 2021.11.18</td>
-	                                       	</tr>
-	                                       	<tr>
-	                                       		<th>프로젝트 설명</th>
-	                                       		<td>
-	                                       			Model2 방식으로 구현된 간단한 달력 프로젝트입니다.<br><br>
-	                                       			사용자는 회원가입, 로그인, 달력 보기, 일정 추가, 수정, 삭제를 할 수 있습니다.<br>
-	                                       			Model1 방식과 달리 MVC패턴 방법을 이용한 첫 프로젝트이기도 합니다. 
-	                                       		</td>
-	                                       	</tr>
-	                                       	<tr>
-	                                       		<th>Link</th>
-	                                       		<td>
-	                                       			<a class="btn btn-outline-danger btn-sm" href="https://github.com/suar0905/Todo" target="_blank">Github</a>
-	                                       		</td>                     
-	                                       	</tr>
-	                                	</table>                                       
-                                    </div>
-                                </div>
-                            </div> 
-                            <div class="col-md-12" id="review3">
+                        	<div class="col-md-12" id="review1">
                                 <div class="review-slider-item">
                                     <div>
                                 		<h4><b>◈ 숙박 공유 서비스[TAP] Project</b></h4><hr>
@@ -363,6 +276,93 @@
 	                                	</table>                   
                                     </div>
                                 </div>
+                            </div> 
+                            <div class="col-md-12" id="review2">
+                                <div class="review-slider-item">
+                                    <div>
+                                		<h4><b>◈ 달력 Project</b></h4><hr>
+                                        <img src="img/todoProject.PNG" alt="Image" height="300" width="750">
+                                    </div>
+                                    <div class="review-text">                                 
+                                    	<table border="0" class="table">
+	                                    	<tr>
+	                                       		<th>프로젝트 방식</th>
+	                                       		<td>Model 2</td>
+	                                       	</tr>
+	                                       	<tr>
+	                                       		<th>사용 프로그램</th>
+	                                       		<td>Eclipse(2020-12 : 4.18.0), HeidiSQL(10.1.48)</td>
+	                                       	</tr>
+	                                       	<tr>
+	                                       		<th>사용 언어</th>
+	                                       		<td>JAVA, SQL, HTML</td>
+	                                       	</tr>
+	                                       	<tr>
+	                                       		<th>작업 기간</th>
+	                                       		<td>2021.11.08 ~ 2021.11.18</td>
+	                                       	</tr>
+	                                       	<tr>
+	                                       		<th>프로젝트 설명</th>
+	                                       		<td>
+	                                       			Model2 방식으로 구현된 간단한 달력 프로젝트입니다.<br><br>
+	                                       			사용자는 회원가입, 로그인, 달력 보기, 일정 추가, 수정, 삭제를 할 수 있습니다.<br>
+	                                       			Model1 방식과 달리 MVC패턴 방법을 이용한 첫 프로젝트이기도 합니다. 
+	                                       		</td>
+	                                       	</tr>
+	                                       	<tr>
+	                                       		<th>Link</th>
+	                                       		<td>
+	                                       			<a class="btn btn-outline-danger btn-sm" href="https://github.com/suar0905/Todo" target="_blank">Github</a>
+	                                       		</td>                     
+	                                       	</tr>
+	                                	</table>                                       
+                                    </div>
+                                </div>
+                            </div> 
+                            <div class="col-md-12" id="review3">
+                                <div class="review-slider-item">
+                                	<div>
+                                		<h4><b>◈ 전자책 쇼핑몰 Project</b></h4><hr>
+                                        <img src="img/ebookProject.PNG" alt="Image" height="300" width="750">
+                                    </div>
+                                    <div class="review-text">
+                                    	<table border="0" class="table">
+                                        	<tr>
+                                        		<th>프로젝트 방식</th>
+                                        		<td>Model 1</td>
+                                        	</tr>
+                                        	<tr>
+                                        		<th>사용 프로그램</th>
+                                        		<td>Eclipse(2020-12 : 4.18.0), HeidiSQL(10.1.48)</td>
+                                        	</tr>
+                                        	<tr>
+                                        		<th>사용 언어</th>
+                                        		<td>JAVA, SQL, HTML</td>
+                                        	</tr>
+                                        	<tr>
+                                        		<th>작업 기간</th>
+                                        		<td>2021.09.14 ~ 2021.10.12</td>
+                                        	</tr>
+                                        	<tr>
+                                        		<th>프로젝트 설명</th>
+                                        		<td>
+                                        			Model1 방식으로 구현한 첫 번째 프로젝트인 전자책 쇼핑몰 프로젝트입니다.<br><br>
+                                        			이용자로는 일반 회원과 관리자로 구분되어 있으며,<br>
+                                        			일반 회원은 전자책 주문, 주문 후 후기작성, 문의 작성을 할 수 있습니다.<br>
+                                        			관리자는 회원 관리, 전자책 관리, 공지사항 관리, 문의 관리를 할 수 있습니다.<br><br>
+                                        			공통 기능으로는 로그인, 회원가입, 개인정보 수정, 회원 탈퇴를 할 수 있습니다. 
+                                        		</td>
+                                        	</tr>
+                                        	<tr>
+                                        		<th>Link</th>
+                                        		<td>
+                                        			<a class="btn btn-outline-danger btn-sm" href="https://github.com/suar0905/shop" target="_blank">Github</a>
+                                        			<a class="btn btn-outline-danger btn-sm" href="http://3.34.40.41/shop/" target="_blank">Project</a>
+                                        		</td>                     
+                                        	</tr>
+                                        </table>   
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -390,7 +390,7 @@
                                 <div class="exp-col">
                                     <h3>◈ FrontEnd</h3><br>
                                     <h5>HTML5</h5>
-                                    <h5>CSS</h5>
+                                    <h5>CSS3</h5>
                                     <h5>JavaScript(JQuery)</h5>
                                     <h5>BootStrap</h5>
                                     <p></p>
