--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
 	                                       		<th>Link</th>
 	                                       		<td>
 	                                       			<a class="btn btn-outline-danger btn-sm" href="https://github.com/suar0905/Todo" target="_blank">Github</a>
+	                                       			<a class="btn btn-outline-danger btn-sm" href="http://3.34.40.41/Todo/login" target="_blank">Project</a>
 	                                       		</td>                     
 	                                       	</tr>
 	                                	</table>                                       
