--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                             <div class="col-lg-5 col-md-6 portfolio-item dig-mar">
                             	<div class="portfolio-wrap">
                                     <figure>
-                                        <img src="img/ebookProject.PNG" class="img-fluid" alt="">
-                                        <a href="img/ebookProject.PNG" data-lightbox="portfolio" data-title="Project Name" class="link-preview" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <img src="img/ebook.png" class="img-fluid" alt="">
+                                        <a href="img/ebook.png" data-lightbox="portfolio" data-title="Project Name" class="link-preview" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a href="https://github.com/suar0905/shop" target="_blank" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
                                         <a class="portfolio-title" href="#review3">프로젝트 이름 <span>전자책 쇼핑몰 프로젝트</span></a>
                                     </figure>
@@ -311,7 +311,7 @@
 	                                       	</tr>
 	                                       	<tr>
 	                                       		<th>Link</th>
-	                                       		<td>
+	                                       		<td> 
 	                                       			<a class="btn btn-outline-danger btn-sm" href="https://github.com/suar0905/Todo" target="_blank">Github</a>
 	                                       			<a class="btn btn-outline-danger btn-sm" href="http://3.34.40.41/Todo/login" target="_blank">Project</a>
 	                                       		</td>                     
@@ -324,7 +324,7 @@
                                 <div class="review-slider-item">
                                 	<div>
                                 		<h4><b>◈ 전자책 쇼핑몰 Project</b></h4><hr>
-                                        <img src="img/ebookProject.PNG" alt="Image" height="300" width="750">
+                                        <img src="img/ebook.png" alt="Image" height="300" width="750">
                                     </div>
                                     <div class="review-text">
                                     	<table border="0" class="table">
